# govt-project-fork_for_deployment

./: .gitattributes  .gitignore  AGENTS.md  CRAWLER_INTEGRATION_GUIDE.md  CSPOPS_REWRITE_COMPLETE.md  CSPOPS_REWRITE_PLAN.md  FEATURE_SUGGESTIONS_AND_MIROFISH_INTEGRATION.md  GRAPH_FIX_AND_NEWS_CRAWLER.md  INTEGRATION_ANSWER.md  INTEGRATION_COMPLETE.md  LICENSE  MIROFISH_INTEGRATION_COMPLETE.md  MIROFISH_WORKFLOW_WITH_NLP.md  README.md  agents.manifest.json  crawl_malaysian_news.py  crawl_medical.py  develop-phase.json  integration_patch.py  netlify.toml  requirements.txt  run_flask.py  test.py
opinion_sim_system/: .env.example  AI_SETUP.md  ALL_APIS_INTEGRATED.md  ALL_FIXES_COMPLETE.md  BUG_FIXES.md  COMPLETE_SETUP.md  CRITICAL_FIXES_COMPLETE.md  CSPOPS_PROJECT_SUMMARY.md  DATA_AUTHENTICITY_REPORT.md  EMOTION_FIX_COMPLETE.md  ENHANCED_AI_AND_DATA.md  ENHANCED_DATA_COLLECTION.md  ERROR_FIXES.md  FEATURE_SUGGESTIONS.md  FINAL_FIXES.md  FLASK_APP_GUIDE.md  INSTALLATION_COMPLETE.md  INTERACTIVE_GRAPH_COMPLETE.md  MALAYSIA_SYSTEM_SUMMARY.md  MORE_DATA_SOURCES_GUIDE.md  NLP_FEATURES.md  QUICK_API_SETUP.md  QUICK_START.md  README.md  REAL_DATA_ONLY.md  REAL_TIME_DASHBOARD.md  SIMPLE_EXPLANATIONS.md  SYNTAX_AND_PROGRESS_FIXES.md  UI_ENHANCEMENTS.md  UI_IMPLEMENTED.md  VISUALIZATION_SUMMARY.md  __init__.py  contracts.py  flask_app.py  flask_app_malaysia.py  pyproject.toml  test_multi_agent.py
opinion_sim_system/agents/: __init__.py  base_agent.py  six_agents.py
opinion_sim_system/ai/: __init__.py  cause_effect.py  cause_effect_malaysia.py  chatbot.py  malaysia_economic_ai.py
(+129 files in other folders)
