[project]
name = "opinion-sim-system"
version = "0.1.0"
description = "Phase 1 minimal runnable core for product satisfaction simulation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=2.7.0",
  "transformers>=4.40.0",
  "bertopic>=0.16.0",
]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
